<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.andela.app.animationchallenge.fragment.HomeFragment"
        android:label="@string/txt_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.andela.app.animationchallenge.fragment.AboutFragment"
        android:label="@string/txt_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/userFragment"
        android:name="com.andela.app.animationchallenge.fragment.UserFragment"
        android:label="@string/txt_friend"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.andela.app.animationchallenge.fragment.ProfileFragment"
        android:label="@string/txt_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>