<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:contentDescription="@string/user_image" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="273dp"
            android:layout_height="45dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/write_comment_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userImage"
            app:layout_constraintTop_toTopOf="@+id/userImage"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/comment_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/comment_timestamp"
            app:layout_constraintEnd_toStartOf="@+id/thumbs_up"
            app:layout_constraintTop_toTopOf="@+id/thumbs_up" />

        <ImageView
            android:id="@+id/thumbs_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/thumb_up"
            app:layout_constraintTop_toBottomOf="@+id/comment"
            tools:layout_editor_absoluteX="193dp"
            tools:ignore="ContentDescription,MissingConstraints" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/thumb_down"
            app:layout_constraintStart_toEndOf="@+id/thumbs_up"
            app:layout_constraintTop_toTopOf="@+id/thumbs_up"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/react"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_comment_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/thumbs_up"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>